hw6 minor changes